--- a/cc-crawl/pom.xml
+++ b/cc-crawl/pom.xml
@@ -96,5 +96,11 @@
 				<env>dev</env>
 			</properties>
 		</profile>
+		<profile>
+			<id>prd</id>
+			<properties>
+				<env>prd</env>
+			</properties>
+		</profile>
 	</profiles>
 </project>
