--- a/cc-crawl/src/main/filter/crawl-filter-prd.properties
+++ b/cc-crawl/src/main/filter/crawl-filter-prd.properties
@@ -9,4 +9,4 @@ Maven.MongoDB.DatabaseName = crawl-center
 Maven.MongoDB.AdminDatabaseName = admin
 
 Log.Machine = localhost
-Log.Parent.Directory = /disk1/log/applogs
+Log.Parent.Directory = /opt/log/applogs
