--- a/cc-crawl/src/main/filter/crawl-filter-prd.properties
+++ b/cc-crawl/src/main/filter/crawl-filter-prd.properties
@@ -1,9 +1,9 @@
 Maven.Database.DB.DriverClass = com.mysql.jdbc.Driver
-Maven.Database.DB.ConnectionStr = jdbc:mysql://localhost:3306/crawl-center?characterEncoding=UTF8
+Maven.Database.DB.ConnectionStr = jdbc:mysql://192.168.57.143:3306/crawl-center?characterEncoding=UTF8
 Maven.Database.DB.Username = root
 Maven.Database.DB.Password = root
 
-Maven.MongoDB.Ip = localhost
+Maven.MongoDB.Ip = 192.168.57.143
 Maven.MongoDB.Port = 27001
 Maven.MongoDB.DatabaseName = crawl-center
 Maven.MongoDB.AdminDatabaseName = admin
