add win profile

--- a/cc-crawl/pom.xml
+++ b/cc-crawl/pom.xml
@@ -102,5 +102,11 @@
 				<env>prd</env>
 			</properties>
 		</profile>
+		<profile>
+			<id>win</id>
+			<properties>
+				<env>win</env>
+			</properties>
+		</profile>
 	</profiles>
 </project>
